@@ -14,7 +14,12 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.scm.id>github</project.scm.id>
-        <java.version>1.6</java.version>
+        <java.version>1.7</java.version>
+        <jdk.version>1.7</jdk.version>
+        <!-- 3.1.0 is last version to support Java 7 -->
+        <maven-wrapper-plugin.version>3.1.0</maven-wrapper-plugin.version>
+        <!-- 2.22.2 is last version to support Java 7 -->
+        <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
         <!-- Note: using project checkstyle with AOSP style
         find the default google java checkstyle config here -
         <checkstyle.config.location>google_checks.xml</checkstyle.config.location>
@@ -135,7 +140,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
-                        <version>2.19</version>
+                        <version>${maven-surefire-plugin.version}</version>
                         <configuration>
                             <classpathDependencyExcludes>
                                 <classpathDependencyExclude>com.github.jnr:jnr-unixsocket</classpathDependencyExclude>
@@ -158,6 +163,31 @@
                     <version>0.38.17</version>
                 </dependency>
             </dependencies>
+        </profile>
+        <profile>
+            <id>new-jdks</id>
+            <activation>
+                <jdk>[16.0,)</jdk>
+            </activation>
+            <properties>
+                <!-- Fix for JDK 21 which fails with "Source option 7 is no longer supported. Use 8 or later. -->
+                <jdk.version>1.8</jdk.version>
+            </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${maven-surefire-plugin.version}</version>
+                        <configuration>
+                            <!-- Fix for "java.lang.reflect.InaccessibleObjectException: Unable to make field private final java.util.Map java.util.Collections$UnmodifiableMap.m accessible: module java.base does not "opens java.util" to unnamed module @75eeccf5" -->
+                            <argLine>
+                                --add-opens=java.base/java.util=ALL-UNNAMED
+                            </argLine>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
     </profiles>
 
@@ -206,16 +236,22 @@
                 <filtering>true</filtering>
             </resource>
         </resources>
+        <pluginManagement>
+            <plugins>
+
+            </plugins>
+        </pluginManagement>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.19</version>
+                <version>${maven-surefire-plugin.version}</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
-                <version>3.0.0-M2</version>
+                <!-- 3.0.0-M3 is max version that supports Java 7 -->
+                <version>3.0.0-M3</version>
                 <executions>
                     <execution>
                         <id>validate</id>
@@ -225,7 +261,7 @@
                         <configuration>
                             <rules>
                                 <requireJavaVersion>
-                                    <version>[1.7.0-0,1.9.0-0),[9.0.0,13.0.14]</version>
+                                    <version>[1.7.0-0,1.9.0-0),[9.0,22.0-0)</version>
                                 </requireJavaVersion>
                             </rules>
                         </configuration>
@@ -235,7 +271,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>2.4</version>
+                <version>3.0.0</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
@@ -250,8 +286,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>${jdk.version}</source>
+                    <target>${jdk.version}</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -259,7 +295,7 @@
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>3.1.0</version>
                 <configuration>
-                    <source>1.7</source>
+                    <source>${jdk.version}</source>
                 </configuration>
                 <executions>
                     <execution>
@@ -323,9 +359,15 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin</artifactId>
+                <version>3.1.1</version>
                 <configuration>
                     <skip>true</skip>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-wrapper-plugin</artifactId>
+                <version>${maven-wrapper-plugin.version}</version>
             </plugin>
         </plugins>
     </build>
